--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Desafío de programación para resolver un problema de optimización para minimizar el gasto al comprar empanadas. Se incluye una descripción detallada del problema y se proporcionan casos de prueba.",
   "main": "main.js",
   "scripts": {
-    "test": "vitest"
+    "test": "vitest run"
   },
   "keywords": [
     "javascript",
