first set up, requierements put into if statements

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Desafío de programación para resolver un problema de optimización para minimizar el gasto al comprar empanadas. Se incluye una descripción detallada del problema y se proporcionan casos de prueba.",
   "main": "main.js",
   "scripts": {
+    "start": "node index.js",
     "test": "vitest run"
   },
   "keywords": [
